# bias-barometer

./: LICENSE  README.md  pyproject.toml
biasbarometer/barometers/: __init__.py  autobarometer.py  direction.py  sts_b.py  template.py
biasbarometer/config/: __init__.py  config.py
biasbarometer/data/: __init__.py  dataset.py  wordlist.py
biasbarometer/models/: __init__.py  model.py  representation.py
data/templates/: sts-b.txt
data/wordlists/: man_vs_woman.csv  occupations.txt
data/wordlists/dutch/: beroepen.txt  man_vs_vrouw.csv
notebooks/: example_fasttext.ipynb  examples.ipynb  validation.ipynb
