[project]
name = "bias-barometer"
version = "0.1.0"
description = "Tools for measuring social biases in language models and word embeddings."
license = "MIT"
readme = "README.md"
packages = [{include = "biasbarometer"}]
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.2.0",
    "datasets>=3.1.0",
    "fasttext",
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "simple-parsing>=0.1.6",
    "tabulate>=0.9.0",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]

[tool.uv.sources]
fasttext = { git = "https://github.com/cfculhane/fastText" }

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
